--- a/index.html
+++ b/index.html
@@ -7,12 +7,18 @@
 </head>
 
 <body>
-    <div class="box">
-        <div class="box box1">emmanuel</div>
-        <div class="box box2">jaimes</div>
-        <div class="box box3">emmanuel</div>
-        <div class="box box4">jaimes</div>
+    <h1> emmanuel jaimes </h1>
+    <p>dallas, texas</p>
+    <p class = "bio"> university of iowa student majoring in computer science and engineering </p>
+    <b>resume</b>
+    <div class = resumeContainer>
+        <iframe class="resume" src="emmanuelJResume_2022.html"></iframe>
     </div>
+
+    <img src="GitHub-Mark-64px.png" onclick="window.open('http://github.com/emmanuel-jaimes','_blank')">
 </body>
 
+<footer class="footer">
+
+</footer>
 </html>
