added cname file

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <p class = "bio"> university of iowa student majoring in computer science and engineering </p>
     <b>resume</b>
     <div class = resumeContainer>
-        <iframe class="resume" src="emmanuelJResume_2022.html"></iframe>
+        <iframe class="resume" height="300" width="200" src="emmanuelJResume_2022.html"></iframe>
     </div>
 
-    <img src="GitHub-Mark-64px.png" onclick="window.open('http://github.com/emmanuel-jaimes','_blank')">
+    <img class="githubButton" src="GitHub-Mark-64px.png" onclick="window.open('http://github.com/emmanuel-jaimes','_blank')">
 </body>
 
 <footer class="footer">
