under construction message

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
     <h1> emmanuel jaimes </h1>
-    <p>dallas, texas</p>
+    <p>website under construction</p>
     <p class = "bio"> university of iowa student majoring in computer science and engineering </p>
     <b>resume</b>
     <div class = resumeContainer>
