--- a/index.html
+++ b/index.html
@@ -1,24 +1,45 @@
 <html>
 
 <head>
-    <title> emmanuel jaimes </title>
+    <title> under construction </title>
     <style> @import url('https://fonts.googleapis.com/css2?family=Courier+Prime&display=swap'); </style> 
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <h1> emmanuel jaimes </h1>
-    <p>website under construction</p>
-    <p class = "bio"> university of iowa student majoring in computer science and engineering </p>
-    <b>resume</b>
-    <div class = resumeContainer>
-        <iframe class="resume" height="300" width="200" src="emmanuelJResume_2022.html"></iframe>
+
+    <div class="box">
+        <div class="box box1">
+            <div class="menu">
+                <div class="about">
+                    <a href="index.html">about</a>
+                </div>
+                <div class="experience">
+                    <a href="experience.html">experience</a>
+                </div>
+                <div class="work">
+                    <a href="work.html">work</a>
+                </div>
+                <div class="contact">
+                    <a href="contact.html">contact</a>
+                </div>
+            </div>
+        </div>
+        <div class="box box2">2</div>
+        <div class="box box3">3</div>
+        <div class="box box4">4</div>
+        <div class="box box5">
+            
+            <img class="githubButton" 
+            src="GitHub-Mark-64px.png" 
+            onclick="window.open('http://github.com/emmanuel-jaimes','_blank')"
+            >
+        </div>
+        <div class="box box6">6</div>
+        <div class="box box7">7</div>
     </div>
 
-    <img class="githubButton" src="GitHub-Mark-64px.png" onclick="window.open('http://github.com/emmanuel-jaimes','_blank')">
+    
 </body>
 
-<footer class="footer">
-
-</footer>
 </html>
