--- a/experience.html
+++ b/experience.html
@@ -6,29 +6,27 @@
     </head>
 
     <body>
-        <div class="box">
-            <div class="box box1">
-                <div class="menu">
-                    <div class="about">
-                        <a href="index.html">about</a>
-                    </div>
-                    <div class="experience">
-                        <a href="experience.html">experience</a>
-                    </div>
-                    <div class="work">
-                        <a href="work.html">work</a>
-                    </div>
-                    <div class="contact">
-                        <a href="contact.html">contact</a>
-                    </div>
-                </div>
+        <!-- navigation div -->
+        <div class="tabs">
+            <div class="about">
+                <a href="index.html">about</a>
             </div>
-            <div class="box box2">2</div>
-            <div class="box box3">3</div>
-            <div class="box box4">4</div>
-            <div class="box box5">5</div>
-            <div class="box box6">6</div>
-            <div class="box box7">7</div>
+            <div class="experience">
+                <a href="experience.html">experience</a>
+            </div>
+            <div class="work">
+                <a href="work.html">work</a>
+            </div>
+            <div class="contact">
+                <a href="contact.html">contact</a>
+            </div>
+        </div>
+        
+        <div class="experienceTab">
+            experience
+        </div>
+        <div class="resume">
+            <iframe src="/emmanuelJResume_2022.html" width="500" height="700"></iframe>
         </div>
     </body>
 </html>
