--- a/index.html
+++ b/index.html
@@ -2,14 +2,16 @@
 
 <head>
     <title> under construction </title>
-    <style> @import url('https://fonts.googleapis.com/css2?family=Courier+Prime&display=swap'); </style> 
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Cardo&family=Montserrat&display=swap');
+    </style> 
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
     <div class="box">
-        <div class="box box1">
+        <div class="box1">
             <div class="menu">
                 <div class="about">
                     <a href="index.html">about</a>
@@ -25,20 +27,32 @@
                 </div>
             </div>
         </div>
-        <div class="box box2">2</div>
-        <div class="box box3">3</div>
-        <div class="box box4">4</div>
-        <div class="box box5">
-            
-            <img class="githubButton" 
-            src="GitHub-Mark-64px.png" 
-            onclick="window.open('http://github.com/emmanuel-jaimes','_blank')"
-            >
+        <div class="box2">2</div>
+        <div class="box3">
+            <h2 class="introHeader">Hey, I am Emmanuel Jaimes </h2>
+            <p class="introBody"> and I am a student at the University of Iowa.
+                I am Majoring in Computer Science & Engineering and am on a journey to 
+                become a software engineer. Here is a little bit about me and my journey 
+                so far...
+            </p>
+
         </div>
-        <div class="box box6">6</div>
+        <div class="box4">4</div>
+        <div class="box5">5</div>
+        <div class="box6">
+            <div class="gh">GitHub</div>
+            <img class="githubButton" 
+                src="GitHub-Mark-64px.png" 
+                onclick="window.open('http://github.com/emmanuel-jaimes','_blank')"
+            >
+            <div class="li">LinkedIn</div>
+            <img class="linkedInButton"
+                src="LI-In-Bug.png"
+                onclick="window.open('https://www.linkedin.com/feed/?trk=guest_homepage-basic_nav-header-signin', '_blank')"
+            >            
+        </div>
         <div class="box box7">7</div>
     </div>
-
     
 </body>
 
