--- a/work.html
+++ b/work.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
 
-    <body>
+    <!-- <body>
         <div class="box">
             <div class="box box1">
                 <div class="menu">
@@ -29,7 +29,29 @@
             <div class="box box5">5</div>
             <div class="box box6">6</div>
             <div class="box box7">7</div>
+        </div> -->
+    <!-- </body> -->
+
+    <body>
+        <div class="tabs">
+            <div class="about">
+                <a href="index.html">about</a>
+            </div>
+            <div class="experience">
+                <a href="experience.html">experience</a>
+            </div>
+            <div class="work">
+                <a href="work.html">work</a>
+            </div>
+            <div class="contact">
+                <a href="contact.html">contact</a>
+            </div>
+        </div>
+        
+        <div class="workTab">
+            work
         </div>
     </body>
+
 
 </html>
