--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </div>
             </div>
         </div>
-        <div class="box2">2</div>
+        <div class="box2"></div>
         <div class="box3">
             <h2 class="introHeader">Hey, I am Emmanuel Jaimes </h2>
             <p class="introBody"> and I am a student at the University of Iowa.
@@ -37,8 +37,8 @@
             </p>
 
         </div>
-        <div class="box4">4</div>
-        <div class="box5">5</div>
+        <div class="box4"></div>
+        <div class="box5"></div>
         <div class="box6">
             <div class="gh">GitHub</div>
             <img class="githubButton" 
@@ -48,10 +48,10 @@
             <div class="li">LinkedIn</div>
             <img class="linkedInButton"
                 src="LI-In-Bug.png"
-                onclick="window.open('https://www.linkedin.com/feed/?trk=guest_homepage-basic_nav-header-signin', '_blank')"
+                onclick="window.open('https://www.linkedin.com/in/jaimes-emmanuel', '_blank')"
             >            
         </div>
-        <div class="box box7">7</div>
+        <div class="box box7"></div>
     </div>
     
 </body>
