--- a/contact.html
+++ b/contact.html
@@ -5,9 +5,9 @@
         <link rel="stylesheet" href="style.css">
     </head>
 
-    <!-- <body>
+    <body>
         <div class="box">
-            <div class="box box1">
+            <div class="box1">
                 <div class="menu">
                     <div class="about">
                         <a href="index.html">about</a>
@@ -23,34 +23,23 @@
                     </div>
                 </div>
             </div>
-            <div class="box box2">2</div>
-            <div class="box box3">3</div>
-            <div class="box box4">4</div>
-            <div class="box box5">5</div>
-            <div class="box box6">6</div>
-            <div class="box box7">7</div>
-        </div>
-    </body> -->
 
-    <body>
-        <div class="tabs">
-            <div class="about">
-                <a href="index.html">about</a>
+            <div class="box2"></div>
+            <div class="box3">contact</div>
+            <div class="box4"></div>
+            <div class="box5"></div>
+            <div class="box6">
+                <div class="li">LinkedIn</div>
+                    <img class="linkedInButton"
+                    src="LI-In-Bug.png"
+                    onclick="window.open('https://www.linkedin.com/in/jaimes-emmanuel', '_blank')"
+                    >   
+                </div>
             </div>
-            <div class="experience">
-                <a href="experience.html">experience</a>
-            </div>
-            <div class="work">
-                <a href="work.html">work</a>
-            </div>
-            <div class="contact">
-                <a href="contact.html">contact</a>
-            </div>
+            <div class="box box7"></div>
         </div>
         
-        <div class="contactTab">
-            contact
-        </div>
+        
     </body>
 
 </html>
