--- a/experience.html
+++ b/experience.html
@@ -6,27 +6,42 @@
     </head>
 
     <body>
-        <!-- navigation div -->
-        <div class="tabs">
-            <div class="about">
-                <a href="index.html">about</a>
+        <div class="box">
+            <div class="box1">
+                <div class="menu">
+                    <div class="about">
+                        <a href="index.html">about</a>
+                    </div>
+                    <div class="experience">
+                        <a href="experience.html">experience</a>
+                    </div>
+                    <div class="work">
+                        <a href="work.html">work</a>
+                    </div>
+                    <div class="contact">
+                        <a href="contact.html">contact</a>
+                    </div>
+                </div>
             </div>
-            <div class="experience">
-                <a href="experience.html">experience</a>
+
+            <div class="box2"></div>
+            <div class="box3">
+                <div class="experienceSummary">
+                    <p>Currently I am...</p>
+                    <h2 class="header">Interning as Product Engineer at John Deere</h2>
+                    <p>
+                        &nbsp;
+                    </p>
+                </div>
             </div>
-            <div class="work">
-                <a href="work.html">work</a>
+            <div class="box4"></div>
+            <div class="box5"></div>
+            <div class="experience6">
+                <b>Take a look at my resume!</b>
+                <div class = resumeContainer>
+                    <iframe class="resume" src="emmanuelJResume_2022.html"></iframe>
+                </div>
             </div>
-            <div class="contact">
-                <a href="contact.html">contact</a>
-            </div>
-        </div>
-        
-        <div class="experienceTab">
-            experience
-        </div>
-        <div class="resume">
-            <iframe src="/emmanuelJResume_2022.html" width="500" height="700"></iframe>
-        </div>
+            <div class="box box7"></div>
     </body>
 </html>
