added inputs to contact page. cleanup, php to be implemented

--- a/experience.html
+++ b/experience.html
@@ -6,8 +6,8 @@
     </head>
 
     <body>
-        <div class="box">
-            <div class="box1">
+        <div class="layoutManager">
+            <div class="menuManager">
                 <div class="menu">
                     <div class="about">
                         <a href="index.html">about</a>
@@ -24,24 +24,28 @@
                 </div>
             </div>
 
-            <div class="box2"></div>
-            <div class="box3">
+            <div class="experience2"></div>
+
+            <div class="experience3">
                 <div class="experienceSummary">
                     <p>Currently I am...</p>
-                    <h2 class="header">Interning as Product Engineer at John Deere</h2>
+                    <h2 class="experienceHeader">Interning as Product Engineer at John Deere</h2>
                     <p>
                         &nbsp;
                     </p>
                 </div>
             </div>
-            <div class="box4"></div>
-            <div class="box5"></div>
+
+            <div class="experience4"></div>
+            <div class="experience5"></div>
+            
             <div class="experience6">
                 <b>Take a look at my resume!</b>
                 <div class = resumeContainer>
                     <iframe class="resume" src="emmanuelJResume_2022.html"></iframe>
                 </div>
             </div>
-            <div class="box box7"></div>
+            
+            <div class="experience7"></div>
     </body>
 </html>
