--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 <body>
 
-    <div class="box">
-        <div class="box1">
+    <div class="layoutManager">
+        <div class="menuManager">
             <div class="menu">
                 <div class="about">
                     <a href="index.html">about</a>
@@ -27,19 +27,23 @@
                 </div>
             </div>
         </div>
-        <div class="box2"></div>
-        <div class="box3">
+
+        <div class="index2"></div>
+
+        <div class="index3">
             <h2 class="introHeader">Hey, I am Emmanuel Jaimes </h2>
+            <p>Software Engineer/Developer</p>
             <p class="introBody"> and I am a student at the University of Iowa.
                 I am Majoring in Computer Science & Engineering and am on a journey to 
                 become a software engineer. Here is a little bit about me and my journey 
                 so far...
             </p>
-
         </div>
-        <div class="box4"></div>
-        <div class="box5"></div>
-        <div class="box6">
+
+        <div class="index4"></div>
+        <div class="index5"></div>
+
+        <div class="index6">
             <div class="gh">GitHub</div>
             <img class="githubButton" 
                 src="GitHub-Mark-64px.png" 
@@ -51,7 +55,8 @@
                 onclick="window.open('https://www.linkedin.com/in/jaimes-emmanuel', '_blank')"
             >            
         </div>
-        <div class="box box7"></div>
+
+        <div class="index7"></div>
     </div>
     
 </body>
