updated pages and added construction notif

--- a/contact.html
+++ b/contact.html
@@ -28,13 +28,11 @@
             <div class="contact2"></div>
             
             <div class="contact3">
-
                 <h2 class="contactHeader">Lets Connect!</h2>
                 <div class="li">Find me on LinkedIn</div>
                 <img class="linkedInButton"
                 src="LI-In-Bug.png"
-                onclick="window.open('https://www.linkedin.com/in/jaimes-emmanuel', '_blank')"
-                >            
+                onclick="window.open('https://www.linkedin.com/in/jaimes-emmanuel', '_blank')">            
             </div>
             
             <div class="contact4"></div>
