--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-
+    website under construction, updated frequently
     <div class="layoutManager">
         <div class="menuManager">
             <div class="menu">
@@ -33,11 +33,12 @@
         <div class="index3">
             <h2 class="introHeader">Hey, I am Emmanuel Jaimes </h2>
             <p>Software Engineer/Developer</p>
-            <p class="introBody"> and I am a student at the University of Iowa.
-                I am Majoring in Computer Science & Engineering and am on a journey to 
-                become a software engineer. Here is a little bit about me and my journey 
-                so far...
+            <p class="introBody"> I am a student at the University of Iowa.
+                I am Majoring in Computer Science & Engineering and I enjoy writing lines of 
+                grammatically incorrect sentences, wordMorphingNamesForVariables, appealing 
+                <br> &nbsp;&nbsp;&nbsp;&nbsp; indented lines of code; 
             </p>
+            <p class="introBodyConclusion">and here is a little bit about my journey so far...</p>
         </div>
 
         <div class="index4"></div>
@@ -45,7 +46,7 @@
 
         <div class="index6">
             <div class="gh">GitHub</div>
-            <img class="githubButton" 
+            <img class="githubButton1" 
                 src="GitHub-Mark-64px.png" 
                 onclick="window.open('http://github.com/emmanuel-jaimes','_blank')"
             >
