cleanup, style updates

--- a/work.html
+++ b/work.html
@@ -38,6 +38,14 @@
             <div class="work5"></div>
 
             <div class="work6">
+                <div class="frameLayout"> 
+                    <div class="frame f1">frame1</div>
+                    <div class="frame f2">frame2</div>
+                    <div class="frame f3">frame3</div>
+                    <div class="frame f4">frame4</div>
+                    <div class="frame f5">frame5</div>
+                    <div class="frame f6">frame6</div>                    
+                </div>
             </div>
             
             <div class="work7"></div>
