--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
 
             <div class="contact6">
                 <p><b>Or leave me a message!</b></p>
-                <iframe src="contactForm.php" frameborder="0" width="100%" height="400px" allowtransparency='true'></iframe>
+                <!-- <iframe src="contactForm.php" frameborder="0" width="100%" height="400px" allowtransparency='true'></iframe> -->
                 <!-- <div class="contactFields">
                     <form action="action_page.php" method="POST" enctype="multipart/form-data">
                         <div>
