styling updates and photo added

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
         <!-- INDEX -->
         <div id="index2">website under construction, updated frequently</div>
 
+        <img class="foto" src="IMG_4944.png" alt="pentacrest">  
+
         <div class="index3">
             <h2 class="introHeader"><b>Hey, I am Emmanuel Jaimes</b></h2>
             <h4>Software Engineer/Developer</h4>
