image, body, styling updates

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     
     <div class="layoutManager">
+        
         <div class="menuManager">
             <div class="menu">
                 <div class="about">
@@ -29,9 +30,9 @@
         </div>
 
         <!-- INDEX -->
-        <div id="index2">website under construction, updated frequently</div>
+        <!-- <div id="index2">website under construction, updated frequently</div> -->
 
-        <img class="foto" src="IMG_4944.png" alt="pentacrest">  
+        <img class="foto" src="pentacrest.png" alt="pentacrest">  
 
         <div class="index3">
             <h2 class="introHeader"><b>Hey, I am Emmanuel Jaimes</b></h2>
@@ -62,7 +63,7 @@
         <div class="work3">
             <h2 class="workHeader">Checkout my work on GitHub</h2>
             <img class="githubButton" 
-            src="GitHub-Mark-64px.png" 
+            src="GitHub-Mark-Light-64px.png" 
             onclick="window.open('http://github.com/emmanuel-jaimes','_blank')">  
         </div>
         <!-- end of work -->
