text styling udates

--- a/index.html
+++ b/index.html
@@ -3,15 +3,14 @@
 <head>
     <title> ## Under Construction ## </title>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Cardo&family=Montserrat&display=swap');
-    </style> 
+        @import url('https://fonts.googleapis.com/css2?family=Cardo&family=Montserrat:wght@400;500;600;800&family=Source+Code+Pro:wght@300;400&display=swap');    </style> 
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     
     <div class="layoutManager">
-        
+
         <div class="menuManager">
             <div class="menu">
                 <div class="about">
@@ -30,7 +29,7 @@
         </div>
 
         <!-- INDEX -->
-        <!-- <div id="index2">website under construction, updated frequently</div> -->
+        <div id="index2"></div>
 
         <img class="foto" src="pentacrest.png" alt="pentacrest">  
 
@@ -51,8 +50,8 @@
 
         <div class="experience3">
             <div class="experienceSummary">
-                <p>Currently I am...</p>
-                <h2 class="experienceHeader">Interning as Product Engineer at John Deere</h2>
+                <h4>Currently I am...</h4>
+                <h2 class="experienceHeader">Interning as <b>Product Engineer at John Deere</b></h2>
             </div>
         </div>
         <!-- end of experience section -->
