cleanup and added shortcut logo

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <style>    
         @import url('https://fonts.googleapis.com/css2?family=Cardo&family=Montserrat:wght@400;500;600;800&family=Source+Code+Pro:wght@300;400&display=swap');    
     </style>
+    <link rel="shortcut icon" type="image/x-icon" href="portfolio_logo.png" />
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="app.js"></script>
