--- a/index.html
+++ b/index.html
@@ -79,9 +79,10 @@
       <div class="grid-item">
         <section id="about">
           <h2>About me,</h2>
-          <p>Never before had I seen something like it, I powered on my first computer, IBM, at the age of four and never looked back.
-            Now I am continuing to learn the ins-and-outs of a computer, from hardware to software, with ambitions of developing solutions of the future.</p>
           <h3>My name is Emmanuel Jaimes and I am a student at the University of Iowa majoring in <b>Computer Science & Engineering.</b></h3>
+          <p>I am eager to transfer the skills that I have learned throughout my collegiate career into the industry and contribute to 
+            meaningful projects. I'm excited to search for oppurtunities where I can learn and grow in environments where I'll be a team player.
+          </p>
           <p>Feel free to connect with me on LinkedIn, looking for internships to strengthen learning and apply solutions to real-world problems. </p>
         </section>
     
@@ -100,6 +101,12 @@
             <li>C++</li>
             <li>Python</li>
             <li>HTML/CSS/JavaScript</li>
+            <li>Haskell</li>
+            <li>SQL</li>
+            <li>Embedded Systems</li>
+            <li>Front End Development</li>
+            <li>Back End Development</li>
+            <li>Product Design</li>
           </ul>
         </section>
 
