--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </li>
             <li><a href="#github"></a>
               <img class="githubButton" 
-              src="GitHub-Mark-Light-64px.png" 
+              src="github-mark.png" 
               onclick="window.open('http://github.com/emmanuel-jaimes','_blank')">
             </li>
           </div>
