--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <br>
             <li><a href="#github"></a>
               <img class="githubButton" 
-              src="GitHub-Mark-Light-64px.png" 
+              src="github-mark.png" 
               onclick="window.open('http://github.com/emmanuel-jaimes','_blank')">
             </li>
           </ul>
@@ -78,12 +78,13 @@
 
       <div class="grid-item">
         <section id="about">
-          <h2>About me,</h2>
-          <h3>My name is Emmanuel Jaimes and I am a student at the University of Iowa majoring in <b>Computer Science & Engineering.</b></h3>
-          <p>I am eager to transfer the skills that I have learned throughout my collegiate career into the industry and contribute to 
+          <h2>Howdy, I'm Emmanuel</h2>
+          <p>My name is Emmanuel Jaimes and I am a student at the University of Iowa majoring in <b>Computer Science & Engineering.</b><br>
+            I am eager to transfer the skills that I have learned throughout my collegiate career into the industry and contribute to 
             meaningful projects. I'm excited to search for oppurtunities where I can learn and grow in environments where I'll be a team player.
           </p>
-          <p>Feel free to connect with me on LinkedIn, looking for internships to strengthen learning and apply solutions to real-world problems. </p>
+          <p>Feel free to connect with me on LinkedIn. I'm looking for new oppurtunities to strengthen my skills and apply critical thinking
+            to real-world solutions.</p>
         </section>
     
         <section id="skills">
@@ -145,15 +146,20 @@
           <ul id="project-list">
             <li>
               <h3>Wordle Remix</h3>
-              <p>Hackathon-esque class assignment where alongside teammates developed the classic New York Times Wordle
-                game but with a twist through Java</p>
+              <p>Recreated The New York Time's classic game, Wordle, as a JavaFX application for a fun hackathon assignment.
+                <br>Biggest task was designing and maintaining the backend of the application to ensure successful behavior.
+              </p>
               <h5>Java</h5>
-              <h5>Server/Client Networking</h5>
+              <h5>Networking</h5>
+              <h5>Full Stack</h5>
+              <h5>Multi-threading</h5>
             </li>
             <li>
               <h3>Snake Game</h3>
-              <p>Developing a fun personal project on a classic favorite game, Snake, and giving it my own twist using HTML,
-                CSS, and JavaScript with the retro aesthetic</p>
+              <p>Developed the classic Snake game as a tribute to the good ol' times and reintroduced it to the web.
+                <br>Goal for this project is to strengthen data stucture and algorithm skills while gaining more website
+                development skills and experience. 
+              </p>
                 <h5>Web Dev</h5> <h5>HTML</h5> <h5>CSS</h5> <h5>JavaScript</h5>
             </li>
           </ul>
