--- a/index.html
+++ b/index.html
@@ -78,7 +78,9 @@
 
       <div class="grid-item">
         <section id="about">
-          <h2>Howdy, I'm Emmanuel</h2>
+          <div class="typewriter">
+            <h2>Howdy, I'm Emmanuel</h2>
+          </div>
           <p>My name is Emmanuel Jaimes and I am a student at the University of Iowa majoring in <b>Computer Science & Engineering.</b><br>
             I am eager to transfer the skills that I have learned throughout my collegiate career into the industry and contribute to 
             meaningful projects. I'm excited to search for oppurtunities where I can learn and grow in environments where I'll be a team player.
