ham menu styling

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
         <div class="topnav">
           <a href="#home" class="active"></a>
           <div id="myLinks">
-            <a href="#about">ABOUT</a>
-            <a href="#skills">SKILLS</a>
-            <a href="#experience">EXPERIENCE</a>
-            <a href="#projects">PROJECTS</a>
+            <a href="#about">about</a>
+            <a href="#skills">skills</a>
+            <a href="#experience">experience</a>
+            <a href="#projects">projects</a>
           </div>
           <!-- "Hamburger menu" -->
           <a href="javascript:void(0);" class="icon" onclick="myFunction()">
