--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="topnav">
           <a href="#home" class="active"></a>
           <div id="myLinks">
-            <a href="#about">about</a>
+            <a href="about.html">about</a>
             <a href="#experience">experience</a>
             <a href="#projects">projects</a>
           </div>
@@ -51,7 +51,7 @@
     <div id="nav">
       <ul>
         <li><a class="nav-title" id="nav-logo" href="/">emmanuel jaimes</a></li>
-        <li><a class="nav-link" id="nav-link" href="#about">about</a></li>
+        <li><a class="nav-link" id="nav-link" href="about.html">about</a></li>
         <li><a class="nav-link" id="nav-link" href="#experience">experience</a></li>
         <li><a class="nav-link" id="nav-link" href="#projects">projects</a></li>
       </ul>
