--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <a href="#home" class="active"></a>
           <div id="myLinks">
             <a href="about.html">about</a>
-            <a href="#experience">experience</a>
+            <a href="resume.html">resume</a>
             <a href="#projects">projects</a>
           </div>
           <!-- "Hamburger menu" -->
@@ -52,7 +52,7 @@
       <ul>
         <li><a class="nav-title" id="nav-logo" href="/">emmanuel jaimes</a></li>
         <li><a class="nav-link" id="nav-link" href="about.html">about</a></li>
-        <li><a class="nav-link" id="nav-link" href="#experience">experience</a></li>
+        <li><a class="nav-link" id="nav-link" href="resume.html">resume</a></li>
         <li><a class="nav-link" id="nav-link" href="#projects">projects</a></li>
       </ul>
     </div>
@@ -63,7 +63,7 @@
       <div class="grid-container">
         <div id="home">
           <h1>Emmanuel Jaimes</h1>
-          <h2>Full Stack Developer</h2>
+          <h2>Software Engineer</h2>
           <p>Howdy, I'm Emmanuel, a full stack developer with a passion for creating beautiful and functional websites and applications.</p>
         </div>
 
