--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
         
         <div id="nav">
           <ul>
-            <li><a class="nav-title" id="nav-logo" href="index.html">emmanuel jaimes</a></li>
+            <li><a class="nav-title" id="nav-logo" href="/">emmanuel jaimes</a></li>
             <li><a class="nav-link" id="nav-link" href="#">about</a></li>
             <li><a class="nav-link" id="nav-link" href="resume.html">resume</a></li>
             <li><a class="nav-link" id="nav-link" href="index.html#projects">projects</a></li>
