re redesign implementation

--- a/src/about.html
+++ b/src/about.html
@@ -9,7 +9,7 @@
         @import url('https://fonts.googleapis.com/css2?family=Cardo&family=Montserrat:wght@400;500;600;800&family=Source+Code+Pro:wght@300;400&display=swap');    
     </style>
     <link rel="shortcut icon" type="image/x-icon" href="portfolio_logo.png" />
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="./output.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
 
@@ -63,7 +63,7 @@
         <div class="about">
             <h2 id="about-bio">About me</h2>
             <div class="img-container">
-                <img src="imgs/portrait-grad.jpg" alt="portrait">
+                <img src="/imgs/portrait-grad.jpg" alt="portrait">
             </div>
             <p id="about-bio">
                 Born and raised in Dallas, Texas. A Texas native adopted by the Midwest 
