--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
             <img src="/imgs/Github.svg" alt="Visit GitHub" class="hover:bg-purple-300 p-2 rounded-xl"></a>
           <a href="mailto:emnl.jms@gmail.com" class="flex"> 
             <img src="/imgs/Mail.svg" alt="Send Email" class="hover:bg-green-300 p-2 rounded-xl"></a>
-          <a href="/info/Resume_JaimesCF.pdf" download="resume.pdf" class="flex">
+          <a href="/info/emmanuelJaimes_Resume.pdf" download="resume.pdf" class="flex">
             <img src="/imgs/File_text.svg" alt="Download Resume" class="hover:bg-yellow-300 p-2 rounded-xl"></a>
         </div>
       </div>
