--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
     <div class="grid h-screen text-white grid-cols-1 md:grid-cols-2 lg:grid-cols-2 xl:grid-cols-2 2xl:grid-cols-2 gap-4">
       <!-- column 1 -->
       <div class="mb-4">
-        <h1 class="text-3xl">Emmanuel Jaimes</h1>
-        <p class="pb-12">Software Engineer / Developer</p>
+        <div class="fixed">
+          <h1 class="text-3xl">Emmanuel Jaimes</h1>
+          <p class="pb-12">Software Engineer / Developer</p>
+        </div>
 
         <!-- <div class="flex border-white border-1 p-2 gap-7 justify-start rounded-xl h-10">
           <button class="flex hover:text-red-300" id="about-btn">About</button>
