--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <!-- column 1 -->
       <div class="mb-4">
         <div class="fixed">
-          <h1 class="text-3xl">Emmanuel Jaimes</h1>
+          <h1 class="text-3xl ">Emmanuel Jaimes</h1>
           <p class="pb-12">Software Engineer / Developer</p>
         </div>
 
@@ -66,8 +66,11 @@
         <div class="grid gap-9"> 
           <p class="text-2xl">Experience</p>
           <div>
-            <div class="inline-flex gap-4">
-              <p class="text-xl font-bold">Product Engineer</p> <p class="text-xl font-light">John Deere</p>
+            <div class="inline-flex">
+              <p class="text-xl font-bold">Product Engineer</p> 
+            </div>
+            <div class="inline-flex">
+              <span class="text-xl bg-green-700 rounded-lg p-2 font-light">John Deere</span> 
             </div>
             <p class="py-2">
               Product Engineer
@@ -75,54 +78,62 @@
               Gained valuable lessons and insight about the industry process, product development, product verification and testing, as well as Agile project methodoligies while early in my collegiate career.
             </p>
             <div class="flex flex-wrap gap-2 pt-2">
-              <span class="bg-green-700 p-2 rounded-lg">Embedded Systems</span> 
-              <span class="bg-green-700 p-2 rounded-lg">RestAPI</span> 
-              <span class="bg-green-700 p-2 rounded-lg">Computer Engineering</span> 
-              <span class="bg-green-700 p-2 rounded-lg">Product Development</span> 
-              <span class="bg-green-700 p-2 rounded-lg">Product Testing</span>
+              <span class="border-green-700 border-2 p-2 rounded-lg">Embedded Systems</span> 
+              <span class="border-green-700 border-2 p-2 rounded-lg">RestAPI</span> 
+              <span class="border-green-700 border-2 p-2 rounded-lg">Computer Engineering</span> 
+              <span class="border-green-700 border-2 p-2 rounded-lg">Product Development</span> 
+              <span class="border-green-700 border-2 p-2 rounded-lg">Product Testing</span>
             </div>
           </div>
           <div>
-            <div class="inline-flex gap-4">
-              <p class="text-xl font-bold">IT Support Specialist</p> <p class="text-xl font-light">University of Iowa</p>
+            <div class="inline-flex">
+              <p class="text-xl font-bold">IT Support Specialist</p> 
+            </div>
+            <div class="inline-flex">
+              <p class="text-xl font-light bg-yellow-500 p-2 rounded-lg">University of Iowa</p>
             </div>
             <p class="py-2">
             Contributed as a student support specialist for the College of Public Health for the University of Iowa where I quickly integrated myself into a trusting network of faculty, researchers, and students.
             I was able to provide technical support for the college's IT infrastructure and services, as well as assist with the development of new projects and initiatives.
             </p>
             <div class="flex flex-wrap gap-2 pt-2">
-              <span class="bg-yellow-500 p-2 rounded-lg">Network Troubleshooting</span> 
-              <span class="bg-yellow-500 p-2 rounded-lg">System Deployments</span> 
-              <span class="bg-yellow-500 p-2 rounded-lg">Database Management</span> 
-              <span class="bg-yellow-500 p-2 rounded-lg">Technical Support</span> 
-              <span class="bg-yellow-500 p-2 rounded-lg">Hardware Imaging</span>
+              <span class="border-yellow-500 border-2 p-2 rounded-lg">Network Troubleshooting</span>
+              <span class="border-yellow-500 border-2 p-2 rounded-lg">System Deployments</span>
+              <span class="border-yellow-500 border-2 p-2 rounded-lg">Database Management</span>
+              <span class="border-yellow-500 border-2 p-2 rounded-lg">Technical Support</span>
+              <span class="border-yellow-500 border-2 p-2 rounded-lg">Hardware Imaging</span>
             </div>
           </div>
         </div>
       </div>
 
       <div class="mb-4 col-start-2 p-8" id="projects_tab">
-        <div class="grid gap-4">
+        <div class="grid gap-9">
           <p class="text-2xl">Projects</p>
-          <div class="inline-flex gap-4 pt-4">
-            <p class="text-xl font-bold">Digital Smart Thermometer</p> <p class="text-xl font-light">Project Lead</p>
+          <div>
+            <div class="inline-flex">
+              <p class="text-xl font-bold">Digital Smart Thermometer</p> 
+            </div>
+            <div class="inline-flex">
+              <p class="text-xl font-light bg-blue-700 p-2 rounded-lg">Project Lead</p>
+            </div>
+            <p class="py-2">
+              Designed and programmed an Arduino Uno with ATmega328P, LCD 1602 Module, HW-131 Power Supply
+              Module, and a temperature sensor to meet design specifications.
+              Developed a GUI to output readings retrieved from the temperature sensor into a time-summarized chart.
+              Designed and developed a web app to display and demonstrate live temperature readings along with a live
+              weather forecast in the given area using the OpenWeather API.
+              Collaborated with team members frequently to effectively complete project tasks.
+            </p>
+            <div class="flex flex-wrap gap-2 pt-2">
+              <span class="border-blue-700 border-2 p-2 rounded-lg">Embedded Programming</span> 
+              <span class="border-blue-700 border-2 p-2 rounded-lg">API Integration</span> 
+              <span class="border-blue-700 border-2 p-2 rounded-lg">Circuit Design</span> 
+              <span class="border-blue-700 border-2 p-2 rounded-lg">Product Design</span> 
+              <span class="border-blue-700 border-2 p-2 rounded-lg">Smart System Development</span>
+            </div>  
           </div>
-          <p class="py-2">
-            Designed and programmed an Arduino Uno with ATmega328P, LCD 1602 Module, HW-131 Power Supply
-            Module, and a temperature sensor to meet design specifications.
-            Developed a GUI to output readings retrieved from the temperature sensor into a time-summarized chart.
-            Designed and developed a web app to display and demonstrate live temperature readings along with a live
-            weather forecast in the given area using the OpenWeather API.
-            Collaborated with team members frequently to effectively complete project tasks.
-          </p>
-          <div class="flex flex-wrap gap-2 pt-2">
-            <span class="bg-blue-700 p-2 rounded-lg">Embedded Programming</span> 
-            <span class="bg-blue-700 p-2 rounded-lg">API Integration</span> 
-            <span class="bg-blue-700 p-2 rounded-lg">Circuit Design</span> 
-            <span class="bg-blue-700 p-2 rounded-lg">Product Design</span> 
-            <span class="bg-blue-700 p-2 rounded-lg">Smart System Development</span>
-          </div>  
-      </div>
+        </div>
     </div>
   </div>
 
