--- a/index.html
+++ b/index.html
@@ -34,10 +34,12 @@
         </div> -->
 
         <div class="inline-flex border-white border-1 gap-8 p-2 rounded-xl h-16 md:fixed md:bottom-16" id="connections">
-          <a href="" class="flex">
-            <img src="/imgs/Linkedin.svg" alt="Visit LinkedIn" class="hover:bg-blue-300 p-2 rounded-xl"></a>
-          <a href="" class="flex">
-            <img src="/imgs/Github.svg" alt="Visit GitHub" class="hover:bg-purple-300 p-2 rounded-xl"></a>
+          <a href="https://www.linkedin.com/in/jaimes-emmanuel" target="_blank" class="flex">
+            <img src="/imgs/Linkedin.svg" alt="Visit LinkedIn" class="hover:bg-blue-300 p-2 rounded-xl">
+          </a>
+          <a href="https://github.com/emmanuel-jaimes" target="_blank" class="flex">
+            <img src="/imgs/Github.svg" alt="Visit GitHub" class="hover:bg-purple-300 p-2 rounded-xl">
+          </a>
           <a href="mailto:emnl.jms@gmail.com" class="flex"> 
             <img src="/imgs/Mail.svg" alt="Send Email" class="hover:bg-green-300 p-2 rounded-xl"></a>
           <a href="/info/emmanuelJaimes_Resume.pdf" download="resume.pdf" class="flex">
