--- a/index.html
+++ b/index.html
@@ -78,11 +78,10 @@
               <span class="text-xl bg-green-700 rounded-lg p-2 font-light">John Deere</span> 
             </div>
             <p class="py-2">
-              Product Engineer
-              Interned at John Deere Dubuque Works where I demonstrated my software development skills and was able to contribute to projects of great value for their vehicle lines.
-              Gained valuable lessons and insight about the industry process, product development, product verification and testing, as well as Agile project methodoligies while early in my collegiate career.
+              Interned at Dubuque Works where I demonstrated my engineering skills and was able to gain valuable insight about the industry process and Agile Development Life Cycle.
+              Capitalized on my opportunity to contribute to their construction vehicle lineup through embedded software development, product develpment, and product testing.
             </p>
-            <div class="flex flex-wrap gap-2 pt-2">
+            <div class="flex flex-wrap gap-2 pt-2 text-sm">
               <span class="border-green-700 border-2 p-2 rounded-lg">Embedded Systems</span> 
               <span class="border-green-700 border-2 p-2 rounded-lg">RestAPI</span> 
               <span class="border-green-700 border-2 p-2 rounded-lg">Computer Engineering</span> 
@@ -98,10 +97,10 @@
               <p class="text-xl font-light bg-yellow-500 p-2 rounded-lg">University of Iowa</p>
             </div>
             <p class="py-2">
-            Contributed as a student support specialist for the College of Public Health for the University of Iowa where I quickly integrated myself into a trusting network of faculty, researchers, and students.
-            I was able to provide technical support for the college's IT infrastructure and services, as well as assist with the development of new projects and initiatives.
+            Contributed as a student support specialist for the College of Public Health at the University of Iowa where I quickly integrated myself into a trusting network of faculty, researchers, and students.
+            Honored to be able to provide technical support for the college's IT infrastructure and services, as well as assist with the development of new projects and initiatives through the deployment and maintainent of IT Devices.
             </p>
-            <div class="flex flex-wrap gap-2 pt-2">
+            <div class="flex flex-wrap gap-2 pt-2 text-sm">
               <span class="border-yellow-500 border-2 p-2 rounded-lg">Network Troubleshooting</span>
               <span class="border-yellow-500 border-2 p-2 rounded-lg">System Deployments</span>
               <span class="border-yellow-500 border-2 p-2 rounded-lg">Database Management</span>
@@ -128,9 +127,8 @@
               Developed a GUI to output readings retrieved from the temperature sensor into a time-summarized chart.
               Designed and developed a web app to display and demonstrate live temperature readings along with a live
               weather forecast in the given area using the OpenWeather API.
-              Collaborated with team members frequently to effectively complete project tasks.
             </p>
-            <div class="flex flex-wrap gap-2 pt-2">
+            <div class="flex flex-wrap gap-2 pt-2 text-sm">
               <span class="border-blue-700 border-2 p-2 rounded-lg">Embedded Programming</span> 
               <span class="border-blue-700 border-2 p-2 rounded-lg">API Integration</span> 
               <span class="border-blue-700 border-2 p-2 rounded-lg">Circuit Design</span> 
